examples/test/testpolicy6165.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy6165
  namespace: namespace56
spec:
  podSelector:
    matchLabels:
      key39: value48
      key48: value31
      key49: value28
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key22: value18
          key14: value19
      podSelector:
        matchLabels:
          key41: value39
          key37: value33
          key12: value12
